[gd_scene load_steps=22 format=2]

[ext_resource path="res://src/LaserTower.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/background.png" type="Texture" id=2]
[ext_resource path="res://src/TitleScreen.gd" type="Script" id=3]
[ext_resource path="res://assets/Logo.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/green_arrow_normal.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/blue_arrow_normal.png" type="Texture" id=6]
[ext_resource path="res://src/InfoScreen.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/UI/green_arrow_pressed.png" type="Texture" id=8]
[ext_resource path="res://assets/UI/green_arrow_hover.png" type="Texture" id=9]
[ext_resource path="res://assets/UI/blue_arrow_hover.png" type="Texture" id=10]
[ext_resource path="res://assets/UI/blue_arrow_pressed.png" type="Texture" id=11]

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 32, 16 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 32, 16 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 32, 16 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 20
use_mipmaps = true
use_filter = true
font_data = SubResource( 3 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 32, 16 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 32, 16 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 32, 16 )

[sub_resource type="DynamicFontData" id=11]
font_path = "res://assets/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=12]
size = 20
use_mipmaps = true
use_filter = true
font_data = SubResource( 11 )

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 6.10352e-05, 0 )
anchor_mode = 0
current = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 600, 260 )
texture = ExtResource( 4 )

[node name="PlayButton" type="Button" parent="."]
margin_left = 464.0
margin_top = 384.0
margin_right = 564.0
margin_bottom = 434.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 4 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LaserTower" parent="." instance=ExtResource( 1 )]
position = Vector2( 300, 260 )
scale = Vector2( 10, 10 )

[node name="InfoButton" type="Button" parent="."]
margin_left = 464.0
margin_top = 448.0
margin_right = 564.0
margin_bottom = 498.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 12 )
text = "INFO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoScreen" parent="." instance=ExtResource( 7 )]
position = Vector2( -1024, 0 )

[node name="Tween" type="Tween" parent="."]
[connection signal="button_down" from="PlayButton" to="." method="_on_PlayButton_button_down"]
[connection signal="button_down" from="InfoButton" to="." method="_on_InfoButton_button_down"]
[connection signal="title_button_pressed" from="InfoScreen" to="." method="_on_InfoScreen_title_button_pressed"]
